--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   padding-bottom: 6rem;
@@ -55,6 +54,7 @@ footer {
   border-radius: 25%;
   max-width: 400px;
 }
+
 .infoDump {
   text-align: center;
   align-items: center;
@@ -63,6 +63,7 @@ footer {
   background-color: rgb(84, 94, 123);
   color: whitesmoke;
 }
+
 .form-box {
   text-align: center;
   align-items: center;
@@ -70,8 +71,9 @@ footer {
   flex-direction: column;
   justify-content: center;
   padding: 3rem;
-  
+
 }
+
 .email-form {
   text-align: center;
   align-items: center;
@@ -81,23 +83,29 @@ footer {
   color: whitesmoke;
   font-size: 3rem;
 }
-input, textarea {
+
+input,
+textarea {
   font-size: 2rem;
   resize: none;
   background-color: rgb(175, 175, 175);
 }
+
 .email-form button {
   font-size: 2rem;
 }
+
 #validEmail {
   color: red;
   font-size: 1.5rem;
 }
+
 .repos {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
+
 .repos a {
   text-decoration: none;
   color: rgb(175, 175, 175);
@@ -112,14 +120,42 @@ input, textarea {
   background-color: rgb(84, 94, 123);
   color: whitesmoke;
   margin: 1rem;
+  overflow: hidden;
 }
-.repo img {
+
+.img-box {
+  position: relative;
+}
+
+.img-box:hover .codeUsed {
+  visibility: visible;
+}
+
+.img-box img {
   max-width: 220px;
   max-height: 220px;
   width: auto;
   height: auto;
+}
+
+.img-box:hover img {
+  opacity: 70%;
 
 }
+
+.codeUsed {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: large;
+  color: red;
+  visibility: hidden;
+  background-color: aliceblue;
+  padding: 0.25rem;
+  opacity: 70%;
+}
+
 .resume-box {
   text-align: center;
   align-items: center;
@@ -128,25 +164,29 @@ input, textarea {
   justify-content: center;
   padding: 3rem;
 }
+
 .resume {
   text-align: center;
   align-items: center;
-  display: inline-block; /* Use inline-block to make the container only as wide as its content */
+  display: inline-block;
   border: 5px solid rgb(11, 19, 43);
-  padding: 2rem;
+  padding: 0rem 2rem 2rem 2rem;
   background-color: rgb(84, 94, 123);
   color: whitesmoke;
   font-size: large;
 }
+
 .resume a {
   font-size: xx-large;
   color: whitesmoke;
   border: 3px solid rgb(175, 175, 175);
   padding: 0.5rem;
 }
+
 .resume h3 {
   font-size: x-large;
 }
+
 ul {
   padding: 0;
   list-style: none;
@@ -157,6 +197,7 @@ ul {
     display: flex;
     flex-direction: column;
   }
+
   .about-me img {
     max-width: 75%;
   }
@@ -181,10 +222,11 @@ ul {
     padding-right: 1rem;
     font-size: 1.5vh;
   }
+
   .about-me {
     margin: 1rem;
   }
-  
+
 
   .repos {
     flex-direction: column;
@@ -196,13 +238,18 @@ ul {
     width: auto;
     height: auto;
   }
+
   .repo {
     margin: 0 1rem 0 1rem;
   }
+
   .email-form {
     font-size: 2.5rem;
   }
-  input, textarea, .email-form button {
+
+  input,
+  textarea,
+  .email-form button {
     font-size: 1.5rem;
   }
 }
